[package]
name = "mistery"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
float_to_int = "0.1.0"
num-rational = "0.4.1"

# RELEASE
# bevy = { version = "0.9.1"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
